Added more input types

--- a/index.html
+++ b/index.html
@@ -13,10 +13,21 @@
 <div>
     <div>
         <p>
-            <button>Remove Focus from Input (no JS) (v16)</button>
+            <button>Remove Focus from Input (no JS) (v17)</button>
         </p>
         <form>
-            <input type="text">
+            <label>text: <input type="text" value="text"></label><br/>
+            <label>number: <input type="number" value="0123456789"></label><br/>
+            <label>tel: <input type="tel" value="9876543210"></label><br/>
+            <label>color: <input type="color"></label><br/>
+            <label>date: <input type="date"></label><br/>
+            <label>email: <input type="email"></label><br/>
+            <label>password: <input type="password"></label><br/>
+            <label>file: <input type="file"></label><br/>
+            <label>range: <input type="range"></label><br/>
+            <label>month: <input type="month"></label><br/>
+            <label>time: <input type="time"></label><br/>
+            <label>url: <input type="url"></label><br/>
         </form>
     </div>
     <div>
