--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div>
     <div>
         <p>
-            <button>Remove Focus from Input (no JS) (v17)</button>
+            <button>Remove Focus from Input (no JS) (v18)</button>
         </p>
         <form>
             <label>text: <input type="text" value="text"></label><br/>
@@ -28,6 +28,7 @@
             <label>month: <input type="month"></label><br/>
             <label>time: <input type="time"></label><br/>
             <label>url: <input type="url"></label><br/>
+            <label>Textarea: <textarea></textarea></label>
         </form>
     </div>
     <div>
